Fixed Calendar to stretch when long entries happen.

--- a/sass/elements/_calendar.scss
+++ b/sass/elements/_calendar.scss
@@ -25,7 +25,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     @media screen and (min-width: 768px) {
-      font-size: 1rem;
+      font-size: .9rem;
     }
   }
 
@@ -37,13 +37,13 @@
     @supports (display: grid) {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
-      grid-template-rows: auto repeat(1, 50px);
-      grid-auto-rows: 50px;
+      grid-template-rows: auto minmax(50px, auto);
+      grid-auto-rows: minmax(50px, auto);
       grid-gap: 2px;
       position: relative;
       @media screen and (min-width: 768px){
-        grid-template-rows: auto repeat(1, 95px);
-        grid-auto-rows: 95px;
+        grid-template-rows: auto minmax(70px, auto);
+        grid-auto-rows: minmax(70px, auto);
       }
     }
   }
@@ -81,6 +81,7 @@
   }
 
   .calendar__date {
+  
     font-weight: 700;
     position: absolute;
     top: 2px;
@@ -94,9 +95,18 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    @include padding(1rem 3px);
+    // @include padding(1rem 3px);
   }
-
+.calendar__link{
+border-bottom: solid 1px $mypie-light-grey;
+  @include padding(0 .25rem .25rem);
+  @include margin(null .25rem);
+  &:last-child{
+    border-bottom: none;
+    @include padding(.25rem null 0);
+  
+  }
+}
   .today {
     background: rgba($mypie-red, 0.8);
     color: $mypie-light;
